# rtosc-tutorial

./: 01-basic-jack.c  02-basic-app.c  03-basic-rtosc.cpp  04-macro-rtosc.cpp  05-lo-rtosc.cpp  05-middleware.cpp  06-documented-rtosc.cpp  07-gui.cpp  07-middleware.cpp  07-rtosc.cpp  08-gui.cpp  08-middleware.cpp  08-rtosc.cpp  CMakeLists.txt  Guardfile  Makefile  README  README.adoc  dsp-flow.diag  gui.cpp  main.cpp  osc_init.sh  tutorial.adoc
